--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ghost-s3-storage",
-  "version": "0.2.1",
+  "name": "beta-ghost-s3-storage",
+  "version": "0.2.2",
   "description": "Store Ghost's media at AWS S3 storage. Modified version of ghost-s3 (https://www.npmjs.org/package/ghost-s3) and ghost-aws-s3 (https://github.com/kimar/ghost-aws-s3) ",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/muzix/ghost-s3.git"
+    "url": "https://github.com/freeslugs/ghost-s3.git"
   },
   "keywords": [
     "ghost",
@@ -19,14 +19,14 @@
     "plugin",
     "blog"
   ],
-  "author": "Hoang Pham Huu <phamhuuhoang@gmail.com> (http://thucdon24.com/)",
+  "author": "Gilad Penn <freeslugs@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/muzix/ghost-s3/issues"
+    "url": "https://github.com/freeslugs/ghost-s3/issues"
   },
-  "homepage": "https://github.com/muzix/ghost-s3",
+  "homepage": "https://github.com/freeslugs/ghost-s3",
   "dependencies": {
-    "aws-sdk": "^2.1.6",
-    "when": "^3.6.4"
+    "aws-sdk": "^2.1.40",
+    "when": "^3.7.3"
   }
 }
